--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "start:dev": "nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,10 @@
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "pg": "^8.3.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "typeorm": "^0.2.25"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
